{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 40,
  "lineage": "51965034-b77f-5409-4c78-97f5f9d80931",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "Site1Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az901-Servers-rg/providers/Microsoft.Network/networkInterfaces/az901-Site1Server-nic",
            "internal_domain_name_suffix": "5mr0dk53xqbe3exoo0dwu2d5pa.gvxx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "az901-Site1Server-ipc",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az901-Servers-rg/providers/Microsoft.Network/publicIPAddresses/az901-Site1Server-pip",
                "subnet_id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az901-Site1Network-rg/providers/Microsoft.Network/virtualNetworks/az901-Site1-vnet/subnets/az901-Site1Server-sub"
              }
            ],
            "location": "swedencentral",
            "mac_address": "60-45-BD-AB-9D-9D",
            "name": "az901-Site1Server-nic",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "az901-Servers-rg",
            "virtual_machine_id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az901-Servers-rg/providers/Microsoft.Compute/virtualMachines/az901-Site1Server-vm"
          },
          "dependencies": [
            "azurerm_public_ip.Site1Server",
            "azurerm_resource_group.Servers",
            "azurerm_resource_group.Site1Net",
            "azurerm_subnet.Site1SubSer",
            "azurerm_virtual_network.Site1Net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "Site2Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az901-Servers-rg/providers/Microsoft.Network/networkInterfaces/az901-Site2Server-nic",
            "internal_domain_name_suffix": "ra1qo44e4voexiavptalttvr3f.milx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "az901-Site2Server-ipc",
                "primary": true,
                "private_ip_address": "172.16.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az901-Servers-rg/providers/Microsoft.Network/publicIPAddresses/az901-Site2Server-pip",
                "subnet_id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az901-Site2Network-rg/providers/Microsoft.Network/virtualNetworks/az901-Site2-vnet/subnets/az901-Site2Server-sub"
              }
            ],
            "location": "italynorth",
            "mac_address": "7C-1E-52-09-98-3E",
            "name": "az901-Site2Server-nic",
            "private_ip_address": "172.16.0.4",
            "private_ip_addresses": [
              "172.16.0.4"
            ],
            "resource_group_name": "az901-Servers-rg",
            "virtual_machine_id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az901-Servers-rg/providers/Microsoft.Compute/virtualMachines/az901-Site2Server-vm"
          },
          "dependencies": [
            "azurerm_public_ip.Site2Server",
            "azurerm_resource_group.Servers",
            "azurerm_resource_group.Site2Net",
            "azurerm_subnet.Site2SubSer",
            "azurerm_virtual_network.Site2Net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "Site1Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az901-Servers-rg/providers/Microsoft.Network/networkInterfaces/az901-Site1Server-nic|/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az901-Site1Network-rg/providers/Microsoft.Network/networkSecurityGroups/az901-Site1-nsg",
            "network_interface_id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az901-Servers-rg/providers/Microsoft.Network/networkInterfaces/az901-Site1Server-nic",
            "network_security_group_id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az901-Site1Network-rg/providers/Microsoft.Network/networkSecurityGroups/az901-Site1-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.Site1Server",
            "azurerm_network_security_group.Site1BSG",
            "azurerm_public_ip.Site1Server",
            "azurerm_resource_group.Servers",
            "azurerm_resource_group.Site1Net",
            "azurerm_subnet.Site1SubSer",
            "azurerm_virtual_network.Site1Net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "Site2Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az901-Servers-rg/providers/Microsoft.Network/networkInterfaces/az901-Site2Server-nic|/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az901-Site2Network-rg/providers/Microsoft.Network/networkSecurityGroups/az901-Site2-nsg",
            "network_interface_id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az901-Servers-rg/providers/Microsoft.Network/networkInterfaces/az901-Site2Server-nic",
            "network_security_group_id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az901-Site2Network-rg/providers/Microsoft.Network/networkSecurityGroups/az901-Site2-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.Site2Server",
            "azurerm_network_security_group.Site2BSG",
            "azurerm_public_ip.Site2Server",
            "azurerm_resource_group.Servers",
            "azurerm_resource_group.Site2Net",
            "azurerm_subnet.Site2SubSer",
            "azurerm_virtual_network.Site2Net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "Site1BSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az901-Site1Network-rg/providers/Microsoft.Network/networkSecurityGroups/az901-Site1-nsg",
            "location": "swedencentral",
            "name": "az901-Site1-nsg",
            "resource_group_name": "az901-Site1Network-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1010,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.Site1Net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "Site2BSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az901-Site2Network-rg/providers/Microsoft.Network/networkSecurityGroups/az901-Site2-nsg",
            "location": "italynorth",
            "name": "az901-Site2-nsg",
            "resource_group_name": "az901-Site2Network-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1010,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.Site2Net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "Site1Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "az901-1ite1server",
            "fqdn": "az901-1ite1server.swedencentral.cloudapp.azure.com",
            "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az901-Servers-rg/providers/Microsoft.Network/publicIPAddresses/az901-Site1Server-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.223.161.60",
            "ip_version": "IPv4",
            "location": "swedencentral",
            "name": "az901-Site1Server-pip",
            "resource_group_name": "az901-Servers-rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.Servers",
            "azurerm_resource_group.Site1Net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "Site2Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "az901-site2server",
            "fqdn": "az901-site2server.italynorth.cloudapp.azure.com",
            "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az901-Servers-rg/providers/Microsoft.Network/publicIPAddresses/az901-Site2Server-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.232.184.235",
            "ip_version": "IPv4",
            "location": "italynorth",
            "name": "az901-Site2Server-pip",
            "resource_group_name": "az901-Servers-rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.Servers",
            "azurerm_resource_group.Site2Net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "CoreNetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az901-CoreNetwork-rg/providers/Microsoft.Network/virtualNetworks/az901-CoreNetwork-vnet/subnets/az901-CoreNetwork-sub",
            "name": "az901-CoreNetwork-sub",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "az901-CoreNetwork-rg",
            "virtual_network_name": "az901-CoreNetwork-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.CoreNetwork",
            "azurerm_virtual_network.CoreNetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "Site1SubSer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az901-Site1Network-rg/providers/Microsoft.Network/virtualNetworks/az901-Site1-vnet/subnets/az901-Site1Server-sub",
            "name": "az901-Site1Server-sub",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "az901-Site1Network-rg",
            "virtual_network_name": "az901-Site1-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.Site1Net",
            "azurerm_virtual_network.Site1Net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "Site2SubSer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.16.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az901-Site2Network-rg/providers/Microsoft.Network/virtualNetworks/az901-Site2-vnet/subnets/az901-Site2Server-sub",
            "name": "az901-Site2Server-sub",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "az901-Site2Network-rg",
            "virtual_network_name": "az901-Site2-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.Site2Net",
            "azurerm_virtual_network.Site2Net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "Site1BSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az901-Site1Network-rg/providers/Microsoft.Network/virtualNetworks/az901-Site1-vnet/subnets/az901-Site1Server-sub",
            "network_security_group_id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az901-Site1Network-rg/providers/Microsoft.Network/networkSecurityGroups/az901-Site1-nsg",
            "subnet_id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az901-Site1Network-rg/providers/Microsoft.Network/virtualNetworks/az901-Site1-vnet/subnets/az901-Site1Server-sub"
          },
          "dependencies": [
            "azurerm_network_security_group.Site1BSG",
            "azurerm_resource_group.Site1Net",
            "azurerm_subnet.Site1SubSer",
            "azurerm_virtual_network.Site1Net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "Site2BSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az901-Site2Network-rg/providers/Microsoft.Network/virtualNetworks/az901-Site2-vnet/subnets/az901-Site2Server-sub",
            "network_security_group_id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az901-Site2Network-rg/providers/Microsoft.Network/networkSecurityGroups/az901-Site2-nsg",
            "subnet_id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az901-Site2Network-rg/providers/Microsoft.Network/virtualNetworks/az901-Site2-vnet/subnets/az901-Site2Server-sub"
          },
          "dependencies": [
            "azurerm_network_security_group.Site2BSG",
            "azurerm_resource_group.Site2Net",
            "azurerm_subnet.Site2SubSer",
            "azurerm_virtual_network.Site2Net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "CoreNetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.10.0.0/21"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "be478b52-79af-423d-aa32-cfbddef1a6f0",
            "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az901-CoreNetwork-rg/providers/Microsoft.Network/virtualNetworks/az901-CoreNetwork-vnet",
            "location": "northeurope",
            "name": "az901-CoreNetwork-vnet",
            "resource_group_name": "az901-CoreNetwork-rg",
            "subnet": [
              {
                "address_prefix": "10.10.0.0/24",
                "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az901-CoreNetwork-rg/providers/Microsoft.Network/virtualNetworks/az901-CoreNetwork-vnet/subnets/az901-CoreNetwork-sub",
                "name": "az901-CoreNetwork-sub"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.CoreNetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "Site1Net",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/21"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "aba123fb-bcfd-4e02-92ee-76876a707f78",
            "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az901-Site1Network-rg/providers/Microsoft.Network/virtualNetworks/az901-Site1-vnet",
            "location": "swedencentral",
            "name": "az901-Site1-vnet",
            "resource_group_name": "az901-Site1Network-rg",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az901-Site1Network-rg/providers/Microsoft.Network/virtualNetworks/az901-Site1-vnet/subnets/az901-Site1Server-sub",
                "name": "az901-Site1Server-sub",
                "security_group": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az901-Site1Network-rg/providers/Microsoft.Network/networkSecurityGroups/az901-Site1-nsg"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.Site1Net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "Site2Net",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "172.16.0.0/21"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "7b073788-f5c4-4b5c-a015-7cc0b9ceb1ed",
            "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az901-Site2Network-rg/providers/Microsoft.Network/virtualNetworks/az901-Site2-vnet",
            "location": "italynorth",
            "name": "az901-Site2-vnet",
            "resource_group_name": "az901-Site2Network-rg",
            "subnet": [
              {
                "address_prefix": "172.16.0.0/24",
                "id": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az901-Site2Network-rg/providers/Microsoft.Network/virtualNetworks/az901-Site2-vnet/subnets/az901-Site2Server-sub",
                "name": "az901-Site2Server-sub",
                "security_group": "/subscriptions/2f2cd6a9-7498-4a87-b968-6be5306f74d9/resourceGroups/az901-Site2Network-rg/providers/Microsoft.Network/networkSecurityGroups/az901-Site2-nsg"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.Site2Net"
          ]
        }
      ]
    }
  ]
}